# unloc-contracts

./: .eslintignore  .eslintrc  .gitignore  Anchor.toml  README.md  jest.config.cjs  package-lock.json  package.json  tsconfig.json
client/: .gitignore  README.md  package.json  tsconfig.esm.json  tsconfig.json
client/chainlink-sdk/: package.json
client/src/: global-config.ts  index.ts
client/tests/: 1-global-init.spec.ts  1-global-init.specpartial.ts  2-staking-common.spec.ts  2-staking-common.specpartial.ts  3-voting-common.spec.ts  3-voting-common.specpartial.ts  4-loan-common.spec.ts  4-loan-common.specpartial.ts  5-buyback-common.spec.ts  5-buyback-common.specpartial.ts  amm_proxy_type.ts  buyback-utils.ts  staking-utils.ts  test.spec.ts
client/unloc-dev_raydium-sdk/: package.json
programs/amm-anchor/: Cargo.toml
programs/buyback_burn/: Cargo.toml
programs/buyback_burn/src/: lib.rs
programs/serum-swap/: Cargo.toml  package.json
programs/swap/: Cargo.toml
programs/swap/src/: lib.rs
programs/unloc-burn/: Cargo.toml
programs/unloc-burn/libs/amm-anchor/: Cargo.toml
programs/unloc-burn/libs/amm-anchor/src/: accounts.rs  instructions.rs  lib.rs
programs/unloc-burn/libs/raydium-lib/src/: amm_instruction.rs  amm_stats.rs
programs/unloc-burn/src/: lib.rs
programs/unloc-loan/: Cargo.toml
programs/unloc-loan/src/: constant.rs  contexts.rs  error.rs  events.rs  lib.rs  processor.rs  states.rs  utils.rs
programs/unloc-loan/src/processor/: mod.rs  process_accept_offer.rs  process_accept_offer_by_voting.rs  process_cancel_offer.rs  process_cancel_sub_offer.rs  process_claim_collateral.rs  process_claim_expired_collateral.rs  process_claim_rewards.rs  process_deposit_rewards.rs  process_repay_loan.rs  process_set_global_state.rs  process_set_internal_info.rs  process_set_offer.rs  process_set_sub_offer.rs  process_set_sub_offer_by_staking.rs
programs/unloc-loan/src/processor/admin/: mod.rs  process_claim_expired_collateral.rs  process_create_global_state.rs  process_deposit_rewards.rs  process_set_global_redeem_reset.rs  process_set_global_state.rs  process_set_staking_pool.rs  process_set_voting.rs  process_update_global_state.rs  process_withdraw_rewards.rs
programs/unloc-loan/src/processor/borrower/: mod.rs  process_cancel_offer.rs  process_cancel_sub_offer.rs  process_claim_borrower_rewards.rs  process_create_offer.rs  process_create_sub_offer.rs  process_delete_offer.rs  process_delete_sub_offer.rs  process_repay_loan.rs  process_set_offer.rs  process_set_sub_offer.rs  process_set_sub_offer_by_staking.rs  process_update_sub_offer.rs
programs/unloc-loan/src/processor/lender/: mod.rs  process_accept_offer.rs  process_accept_offer_by_voting.rs  process_claim_borrower_rewards.rs  process_claim_collateral.rs  process_claim_lender_rewards.rs  process_claim_rewards.rs
programs/unloc-staking/: Cargo.toml
programs/unloc-staking/src/: error.rs  lib.rs  states.rs  utils.rs
programs/unloc-staking/src/processor/: mod.rs  pool.rs  process_create_user.rs  process_harvest.rs  process_pool.rs  process_set_stake_state.rs  process_stake.rs  process_update_stake_state.rs  set_stake_state.rs
programs/unloc-staking/src/processor/admin/: mod.rs  process_create_extra_reward_configs.rs  process_pool.rs  process_set_extra_reward_configs.rs  process_set_stake_state.rs  process_update_stake_state.rs
programs/unloc-staking/src/processor/user/: mod.rs  process_create_user.rs  process_create_user_state.rs  process_harvest.rs  process_stake.rs  process_unstake.rs
programs/unloc-staking/src/states/: extra_rewards_account.rs  farmpool_account.rs  mod.rs  state_account.rs  user_account.rs  user_state_account.rs
programs/unloc-staking/src/utils/: constant.rs  events.rs  mod.rs  utils.rs
programs/unloc-utility/: Cargo.toml
programs/unloc-utility/src/: lib.rs
programs/unloc-voting/: Cargo.toml
programs/unloc-voting/src/: constant.rs  error.rs  events.rs  lib.rs  states.rs  utils.rs
programs/unloc-voting/src/processor/: mod.rs  process_create_global_state.rs  process_del_voting_item.rs  process_set_global_state.rs  process_set_voting.rs  process_set_voting_item.rs  process_update_global_state.rs  process_vote.rs
scripts/: build.ts  test.ts  utils.ts
tests/: unloc-staking.ts
(+154 files in other folders)
