[package]
name = "unloc_burn"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "unloc_burn"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
dev = []

[dependencies]
anchor-lang = {version="0.24.2", features=["init-if-needed"]}
anchor-spl = {version="0.24.2", features=["token", "dex"]}
amm-anchor = {path="./libs/amm-anchor", version="0.1.0"}
