[package]
name = "unloc_nft_loan"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
devnet = []

[dependencies]
anchor-lang = {version="0.23.0", features=["init-if-needed"]}
anchor-spl = "0.23.0"