[package]
name = "unloc-utility"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "unloc_utility"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
devnet = []

[dependencies]
anchor-lang = {version="0.23.0", features=["init-if-needed"]}
anchor-spl = {version="0.23.0", features=["token", "dex"]}
swap = {path="./../serum-swap", features=["cpi"]}
