[package]
name = "unloc_voting"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
dev = []

[dependencies]
anchor-lang = {version="0.24.2", features=["init-if-needed"]}
anchor-spl = "0.24.2"
unloc_staking = {path="../unloc-staking", features=["no-entrypoint"]}
mpl-token-metadata = { version="~1.2.7", features = [ "no-entrypoint" ] }